timeline filled in

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liz Dorman</title>
+    <title>Hey! Liz here :)</title>
     <meta name="description" content="Hi, I'm Liz">
     
     <!-- Google Fonts -->
@@ -63,8 +63,29 @@
               <textPath 
                         xlink:href="#textcircle2" 
                         aria-label="what i've done •••• about me ••••" 
-                        textLength="400">
+                        textLength="470">
                 what i've done
+              </textPath>
+            </text>
+          </g>
+        </svg>
+      </a>
+
+      <!-- Third Circular Text -->
+      <a href="aboutme.html" class="circular-text-link">
+        <svg xmlns="http://www.w3.org/2000/svg" xml:lang="en" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1000 1000" class="circular-text-svg-secondary">
+          <title>Secondary Circular Text Path</title>
+          <defs>
+            <path id="textcircle3" d="M500,950
+                         a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(192,500,500)" />
+          </defs>
+          <g class="textcircle3">
+            <text textLength="270">
+              <textPath 
+                        xlink:href="#textcircle3" 
+                        aria-label="about me" 
+                        textLength="270">
+                about me
               </textPath>
             </text>
           </g>
@@ -74,10 +95,10 @@
         <!-- Social Footer -->
         <div class="social-footer">
             <div class="flex justify-center space-x-8">
-                <a href="https://x.com/lizwandersworld" class="social-link">
+                <a href="https://www.instagram.com/liz_explores_world/" class="social-link">
                     <img src="assets/icons/instagram.svg" alt="Instagram" class="social-icon">
                 </a>
-                <a href="https://www.instagram.com/liz_explores_world/" class="social-link">
+                <a href="https://x.com/lizwandersworld" class="social-link">
                     <img src="assets/icons/twitter.svg" alt="Twitter/X" class="social-icon">
                 </a>
                 <a href="https://www.linkedin.com/in/elizabeth-dorman-4031a2124/" class="social-link">
