--- a/whativedone.html
+++ b/whativedone.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What I've Done - Liz Dorman</title>
+    <title>Timeline of Liz</title>
     <meta name="description" content="Liz Dorman's work and projects">
     
     <!-- Google Fonts -->
