--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <title>Secondary Circular Text Path</title>
           <defs>
             <path id="textcircle2" d="M500,950
-                         a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(12,500,500)" />
+                         a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(0,500,500)" />
           </defs>
           <g class="textcircle2">
             <text textLength="470">
@@ -77,7 +77,7 @@
           <title>Secondary Circular Text Path</title>
           <defs>
             <path id="textcircle3" d="M500,950
-                         a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(192,500,500)" />
+                         a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(120,500,500)" />
           </defs>
           <g class="textcircle3">
             <text textLength="270">
@@ -86,6 +86,27 @@
                         aria-label="about me" 
                         textLength="270">
                 about me
+              </textPath>
+            </text>
+          </g>
+        </svg>
+      </a>
+
+      <!-- Fourth Circular Text -->
+      <a href="#" class="circular-text-link">
+        <svg xmlns="http://www.w3.org/2000/svg" xml:lang="en" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1000 1000" class="circular-text-svg-secondary">
+          <title>Secondary Circular Text Path</title>
+          <defs>
+            <path id="textcircle4" d="M500,950
+                         a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(240,500,500)" />
+          </defs>
+          <g class="textcircle4">
+            <text textLength="370">
+              <textPath 
+                        xlink:href="#textcircle4" 
+                        aria-label="in a nutshell" 
+                        textLength="370">
+                in a nutshell
               </textPath>
             </text>
           </g>
