--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </a>
 
       <!-- Fourth Circular Text -->
-      <a href="#" class="circular-text-link">
+      <a href="nutshell.html" class="circular-text-link">
         <svg xmlns="http://www.w3.org/2000/svg" xml:lang="en" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1000 1000" class="circular-text-svg-secondary">
           <title>Secondary Circular Text Path</title>
           <defs>
@@ -101,11 +101,11 @@
                          a450,450 0 0,1 0,-900a450,450 0 0,1 0,900Z" transform="rotate(240,500,500)" />
           </defs>
           <g class="textcircle4">
-            <text textLength="370">
+            <text textLength="400">
               <textPath 
                         xlink:href="#textcircle4" 
                         aria-label="in a nutshell" 
-                        textLength="370">
+                        textLength="400">
                 in a nutshell
               </textPath>
             </text>
