--- a/nutshell.html
+++ b/nutshell.html
@@ -6,6 +6,9 @@
     <title>Liz in a Nutshell</title>
     <meta name="description" content="Liz Dorman in a nutshell">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/liz_squiggly_prof_pic.png">
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
