--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,9 @@
     <title>About Liz</title>
     <meta name="description" content="About Liz Dorman">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/liz_squiggly_prof_pic.png">
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
