--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Hey! Liz here :)</title>
     <meta name="description" content="Hi, I'm Liz">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/liz_squiggly_prof_pic.png">
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
