--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./src/styles.css">
 </head>
-<body class="bg-black text-white min-h-screen flex flex-col">
+<body class="bg-black text-white min-h-screen flex flex-col index-page">
     <!-- Star Field Background -->
     <div id="starfield" class="fixed inset-0 z-0"></div>
     
