--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./src/styles.css">
+    <link rel="stylesheet" href="./src/social-footer.css">
 </head>
 <body class="bg-black text-white min-h-screen flex flex-col index-page">
     <!-- Star Field Background -->
