--- a/nutshell.html
+++ b/nutshell.html
@@ -19,10 +19,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./src/styles.css">
+    <!-- <link rel="stylesheet" href="./src/styles.css"> -->
     <link rel="stylesheet" href="./src/aboutme.css">
+    <link rel="stylesheet" href="./src/social-footer.css">
 </head>
-<body class="bg-black text-white min-h-screen flex flex-col">
+<body class="bg-black text-white min-h-screen flex flex-col scrollable-page">
     <!-- Star Field Background -->
     <div id="starfield" class="fixed inset-0 z-0"></div>
     
